# job-applicant-agent

./: .env.example  .gitignore  README.md  details.md  instructions.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: profile.yaml  search_queries.yaml
job_agent/: __init__.py  config.py  main.py  preflight.py
job_agent/browser/: humanizer.py  session.py  stealth.py
job_agent/captcha/: detector.py  handler.py
job_agent/database/: migrations.py  models.py  repository.py
job_agent/forms/: detector.py  field_mapping.py  filler.py  resume_uploader.py
job_agent/matching/: job_matcher.py  keyword_extractor.py  location_filter.py  resume_parser.py
job_agent/notifications/: email_client.py  reporter.py  templates.py
job_agent/outreach/: email_extractor.py  email_outreach.py
job_agent/policy/: application_policy.py
job_agent/profile/: profile_loader.py  user_profile.py
job_agent/reports/: excel_reporter.py
job_agent/skills/: __init__.py  application_answers.py  job_quality.py
job_agent/utils/: constants.py  exceptions.py  job_identity.py  logger.py  rate_limiter.py  retry.py
job_agent/writing/: template_writer.py
scripts/: manual_login.py  reset_cookies.py  run_agent.bat  setup_scheduler.ps1  view_report.py
tests/: conftest.py  test_config.py  test_main.py  test_preflight.py
tests/test_database/: test_repository.py
tests/test_forms/: test_field_mapping.py  test_filler.py
tests/test_matching/: test_job_matcher.py  test_keyword_extractor.py  test_location_filter.py  test_resume_parser.py
(+12 files in other folders)
