[project]
name = "job-agent"
version = "1.0.0"
description = "AI-powered job application automation agent for LinkedIn and Indeed"
requires-python = ">=3.11"

dependencies = [
    "playwright>=1.49.0",
    "playwright-stealth>=2.0.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
job-agent = "job_agent.main:main"
job-agent-preflight = "job_agent.preflight:main"

[tool.setuptools.packages.find]
include = ["job_agent*"]
exclude = ["tests*", "config*", "data*", "docs*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
